--- a/src/app/views/code/codeforces/codeforces.component.html
+++ b/src/app/views/code/codeforces/codeforces.component.html
@@ -1,1 +1,190 @@
-<button (click)="cf_get()">Click ME!</button>
+<!--Dialog Start-->
+
+<p-dialog header="Header" [(visible)]="displayBasic" 
+    [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000">
+    <p>Please enter your Codeforces handle name</p>
+    <br>
+    <span class="p-float-label">
+        <input id="handle_name" type="text" pInputText [(ngModel)]="handle_name"> 
+        <label for="handle_name">Handle Name</label>
+    </span>
+
+    <ng-template pTemplate="footer">
+        <p-button label="Submit" icon="pi pi-check" (click)="handleName_post(); displayBasic=false"></p-button>
+    </ng-template>
+
+</p-dialog>
+
+<!--Dialog End-->
+
+<p-card [hidden]='profile_hide'>
+    <p-tabView>        
+        <p-tabPanel header="User Profile">   
+          <!--Profile Start-->
+          <div class="container animated fadeIn">
+              <div class="main-body">
+                  <div class="row">
+                      <div class="col-sm-4 col-md-4 col-4">
+                          <p-card [style]="{'width': '20rem', 'margin-top': '2em'}" styleClass="card1">
+                              <div style="text-align: center;">
+                                  <img src={{handle_info.titlePhoto}} alt="Avatar" 
+                                      style="border-radius: 50%; width: 130px; height: 130px;">
+                                  <br><br>
+                                  <h3><b>{{handle_info.firstName}} {{handle_info.lastName}}</b></h3>
+                                  <h5>{{handle_info.city}}, {{handle_info.country}}</h5>
+                              </div>
+                          </p-card>
+                      </div>              
+                      <div class="col-sm-8 col-md-8 col-8">
+                          <br>
+                          <!-- <p-card [style]="{'width': '39rem', 'margin-top': '2em', 'color':'black'}" styleClass="card1"> -->
+                              <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+                              <table class="table table-striped table-dark" style="color: white;" >
+                                  <tbody style="font-size: large;">
+                                    <tr>
+                                      <td><b>Handle Name</b></td>
+                                      <td>{{handle_info.handle}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Country</b></td>
+                                      <td>{{handle_info.country}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Organization</b></td>
+                                      <td>{{handle_info.organization}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Total Friends</b></td>
+                                      <td>{{handle_info.friendOfCount}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Contribution</b></td>
+                                      <td>{{handle_info.contribution}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Rating</b></td>
+                                      <td>{{handle_info.rating}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Highest Rating</b></td>
+                                      <td>{{handle_info.maxRating}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Rank</b></td>
+                                      <td>{{handle_info.rank}}</td>
+                                    </tr>
+                                    <tr>
+                                      <td><b>Highest Rank</b></td>
+                                      <td>{{handle_info.maxRank}}</td>
+                                    </tr>
+                                  </tbody>
+                              </table>
+                              <!-- <div class="row">
+                                  <div class = "col-6 col-sm-6" style="margin-left: 30px;">
+                                      <h5><b>Last Online:</b> {{handle_info.lastOnlineTimeSeconds * 1000 | date:'H:mm:ss':'UTC'}}</h5>
+                                  </div>
+
+                                  <div class = "col-4 col-sm-4">
+                                      <h5><b>Registered Since:</b> {{handle_info.registrationTimeSeconds * 1000 | date:'H:mm:ss':'UTC'}}</h5>
+                                  </div>
+                              </div> -->
+                          </p-scrollPanel>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        <!--Profile End--> 
+        </p-tabPanel>
+
+
+        <p-tabPanel header="Problems">
+          <div class="row">
+            <div class="col-4">
+                <p-card [style]="{'width': '20rem', 'margin-top': '2em'}" styleClass="card1">
+                  <h5 style="padding-left: 7px;"><b>Select any topic of your interest!</b></h5>
+                  <br>
+                  
+                  <p-dropdown [options]="tag_list" [(ngModel)]="tag" optionLabel="name" 
+                    [filter]="true" filterBy="name"
+                    [virtualScroll]="true" itemSize="4" [style]="{'minWidth':'100%'}"
+                    [showClear]="true" placeholder="Select a Topic Name">
+                  </p-dropdown>
+                
+                  
+                  <ng-template pTemplate="footer">
+                    <button pButton type="button" label="Submit" icon="pi pi-check"
+                      class="p-button-sm" (click)="problems_post();"></button>
+                  </ng-template>
+                </p-card>
+            </div>              
+            <div class="col-8">
+
+              <!--TABLE-->
+              <p-table [columns]="cols" [value]="problem_obj.problems"
+                styleClass="p-datatable-gridlines p-datatable-striped"
+                [scrollable]="true" scrollHeight="1000px" 
+                [resizableColumns]="true">
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th *ngFor="let col of columns" [pSortableColumn]="col.field"
+                          pResizableColumn>
+                            {{col.header}}
+                            <p-sortIcon field="col.field"></p-sortIcon>
+                        </th> 
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-rowData>
+                    <tr>
+                      <td *ngFor="let col of cols">
+
+                        <div *ngIf="col.field=='tags'">
+                          <p-tag *ngFor="let tag of rowData[col.field]" severity="success" [rounded]="true">
+                            {{tag}}&nbsp;&nbsp;
+                          </p-tag>
+                        </div>
+
+                        <div *ngIf="col.field=='link'">
+                          <a href="https://codeforces.com/problemset/problem/{{rowData['contestId']}}/{{rowData['index']}}" target="_blank">
+                            <i class="pi pi-external-link"></i>
+                          </a> 
+                        </div>
+
+                        <div *ngIf="col.field!='tags' && col.field!='link'">
+                          {{rowData[col.field]}}
+                        </div>
+                      </td>
+
+                    </tr>
+                </ng-template>
+            </p-table>
+            
+              
+            </div>
+        </div>
+        </p-tabPanel>
+
+        
+        <!-- <p-tabPanel header="Contests">
+          <br>
+          <hr>
+          <br>
+        </p-tabPanel>
+
+
+
+          <p-tabPanel header="Rating">
+            <br>
+            <hr>
+            <br>
+          </p-tabPanel> 
+
+
+          <p-tabPanel header="Blogs">
+            <br>
+            <hr>
+            <br>
+          </p-tabPanel> -->
+
+    </p-tabView>
+</p-card>
+
