--- a/src/app/views/code/codeforces/codeforces.component.html
+++ b/src/app/views/code/codeforces/codeforces.component.html
@@ -1,1 +1,37 @@
+<head><script type="text/javascript" src="https://github-profile.com/dist/gh-profile-card.min.js"></script></head>
+
+
 <button (click)="cf_get()">Click ME!</button>
+
+
+<br><br><br>
+
+<p-card>
+    <p-tabView>
+        
+        <p-tabPanel header="User Profile">
+            
+            <div class="card"  [style]="{'width': '25rem', 'margin-bottom': '2em', 'color':'black'}">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+                </div>   
+        </p-tabPanel>
+        <p-tabPanel header="Code Here">
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.</p>
+        </p-tabPanel>
+        <p-tabPanel header="Header III">
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
+                cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+                Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.</p>    
+        </p-tabPanel>
+    </p-tabView>
+</p-card>
+<label>{{ 5000000 * 1000 | date:'H:mm:ss':'UTC'}}</label>
+
+
+<div id="github-card"
+     data-username="psiipher">
+     Hello
+</div>
