--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -21,7 +21,8 @@
       <button pButton label="Edit Info" class="p-button-sm p-button-info" icon="pi pi-user-edit"></button>
     </li>
     <li class="nav-item px-2">
-      <button pButton label="Logout" class="p-button-sm p-button-secondary" icon="pi pi-power-off"></button>
+      <button pButton label="Logout" class="p-button-sm p-button-secondary" 
+        (click)="logout()" icon="pi pi-power-off"></button>
     </li>
     <!-- <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
