--- a/src/app/views/mooc/verify-cert/verify-cert.component.html
+++ b/src/app/views/mooc/verify-cert/verify-cert.component.html
@@ -32,7 +32,7 @@
       <hr>
 
       <div class="text-center" style="align-items: center;">
-        <button pButton pRipple type="submit" label="Verify" icon="pi pi-check"
+        <button pButton pRipple type="submit" label="Verify" icon="{{ic}}" (click)="change_ic('pi pi-spin pi-spinner')"
         class="p-button-raised p-button-sm p-button-success"></button>
         <!-- <button type="submit" class="btn btn-success" style="width: 8rem;"></button> -->
       </div>
