--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -21,7 +21,7 @@
     &.newsCard {
         background: #e4e7ea;
         margin: 10px 15px 15px 15px;
-        height: max-content;
+        height: 550px;
     }
     
     &.notes {
