--- a/src/app/views/mooc/udacity/udacity.component.html
+++ b/src/app/views/mooc/udacity/udacity.component.html
@@ -6,7 +6,7 @@
 
         <ng-template pTemplate="caption">
             <div class="table-header">
-                Udemy Courses
+                Udacity Courses
                 <span class="p-input-icon-left" style="float: right;">
                     <i class="pi pi-search"></i>
                     <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search" />
