--- a/src/app/views/mooc/coursera/coursera.component.html
+++ b/src/app/views/mooc/coursera/coursera.component.html
@@ -1,15 +1,15 @@
 <br><br>
 <p-card >
-    <p-table #dt1 [columns]="cols" [value]="courses" [paginator]="true" [rows]="7"
-        styleClass="p-datatable-gridlines p-datatable" 
+    <p-table #dt1 [columns]="cols" [value]="courses" [paginator]="true" [rows]="10"
+        styleClass="p-datatable-striped p-datatable" 
         [globalFilterFields]="['course_title','organization','level']">
 
         <ng-template pTemplate="caption">
             <div class="table-header">
-                Coursera Courses
+                <span class="title" style="font-size: x-large; color: rgb(57, 57, 228);">coursera</span>
                 <span class="p-input-icon-left" style="float: right;">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search" />
+                    <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search" />
                 </span>
             </div>
             <br>
@@ -21,6 +21,7 @@
                     {{col.header}}
                     <p-sortIcon field="{{col.field}}"></p-sortIcon> 
                 </th>
+                <th style="width:4rem"></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowData let-columns="columns">
@@ -35,8 +36,58 @@
                         {{rowData[col.field]}}
                     </div>
                 </td>
+                <td>
+                    <button type="button" pButton pRipple icon="pi pi-search" (click)="selectTitle(rowData)"></button>
+                </td>
             </tr>
         </ng-template>
     </p-table>
 
 </p-card>
+
+<p-dialog header="Recommendations for you!" [(visible)]="sidebar" [position]="position" [modal]="true" [style]="{width: '60vw'}" [baseZIndex]="10000"
+    [draggable]="false" [resizable]="false">
+
+        <!--TABLE-->
+    <p-table [columns]="cols_recommender" [value]="recommender_obj"
+        styleClass="p-datatable"
+        [scrollable]="true" scrollHeight="300px">
+        <ng-template pTemplate="header" let-columns>
+            <tr style="width: fit-content;">
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field" [ngStyle]="styleRecommender(col.field)">
+                    {{col.header}}
+                    <p-sortIcon field="col.field"></p-sortIcon>
+                </th> 
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData>
+            <tr *ngFor="let number of [0,1,2,3,4]">
+                <td style="width: 100px;">{{rowData.a[number]}}</td>
+                <td style="width: 60px;">
+                    <div *ngIf="rowData.c[number].trim()==='coursera'"
+                        style="color: rgb(57, 57, 228); ">
+                        <p-tag value="coursera"></p-tag>
+                        
+                    </div>
+                    <div *ngIf="rowData.c[number].trim()==='udemy'"
+                        style="color: rgb(250, 84, 84);">
+                        <p-tag  severity="danger" value="Udemy"></p-tag>
+                    </div>
+                    <div *ngIf="rowData.c[number].trim()==='pluralsight'"
+                        style="color: rgb(248, 145, 77);">
+                        <p-tag severity="warning" value="PLURALSIGHT"></p-tag>
+                    </div>
+                </td>
+                <td style="width: 30px;">
+                    <a href={{rowData.b[number]}} target="_blank">
+                        <i class="pi pi-external-link"></i>
+                    </a> 
+                </td>
+            </tr>
+        </ng-template>   
+    </p-table>
+    
+        <ng-template pTemplate="footer">
+            <p-button icon="pi pi-check" (click)="sidebar=false" label="Done" styleClass="p-button-text"></p-button>
+        </ng-template>
+</p-dialog>
