--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -43,6 +43,13 @@
     margin-right: 10px;
 }
 
+.notes-heading {
+    margin-top: 17px;
+    float: left;
+    margin-left: 20px;
+    font-size: large;
+}
+
 
 :host ::ng-deep .p-listbox {
     margin-top: 40px;
