--- a/src/app/views/mooc/coursera/coursera.component.html
+++ b/src/app/views/mooc/coursera/coursera.component.html
@@ -18,10 +18,16 @@
         <ng-template pTemplate="header" let-columns >
             <tr>
                 <th *ngFor="let col of columns" [ngStyle]="styleObject(col.field)" pSortableColumn="{{col.field}}">
-                    {{col.header}}
-                    <p-sortIcon field="{{col.field}}"></p-sortIcon> 
+                    <div *ngIf="col.header=='URL'">
+                        {{col.header}}
+                    </div>
+                    <div *ngIf="col.header!='URL'">
+                        {{col.header}}
+                        <p-sortIcon field="{{col.field}}"></p-sortIcon> 
+                    </div>                
+
                 </th>
-                <th style="width:4rem"></th>
+                <th style="width:60px">Similar Courses</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowData let-columns="columns">
@@ -32,12 +38,19 @@
                         <i class="pi pi-external-link"></i>
                         </a> 
                     </div>
-                    <div *ngIf="col.field !='url'">
+                    <div *ngIf="col.field =='course_title'">
+                        <b>{{rowData[col.field]}}</b>
+                    </div>
+                    <div *ngIf="col.field !='url' && col.field !='course_title'">
                         {{rowData[col.field]}}
                     </div>
                 </td>
-                <td>
-                    <button type="button" pButton pRipple icon="pi pi-search" (click)="selectTitle(rowData)"></button>
+                <td style="text-align: center;">
+                    <button pButton pRipple type="button" label="Search" icon="{{ic}}"
+                        class="p-button-raised p-button-success p-button-text p-button-sm" 
+                        (click)="selectTitle(rowData); change_ic('pi pi-spin pi-spinner')">
+                    </button>
+                    <!-- <button type="button" pButton pRipple icon="pi pi-search" (click)="selectTitle(rowData)">Search</button> -->
                 </td>
             </tr>
         </ng-template>
@@ -45,25 +58,24 @@
 
 </p-card>
 
-<p-dialog header="Recommendations for you!" [(visible)]="sidebar" [position]="position" [modal]="true" [style]="{width: '60vw'}" [baseZIndex]="10000"
+<p-dialog header="Recommendations for you!" [(visible)]="sidebar"  [modal]="true" 
+    [baseZIndex]="10000" [style]="{width: '70vw'}"
     [draggable]="false" [resizable]="false">
-
+    <span style="color: blanchedalmond;">Showing courses similar to: <b>{{name}}</b></span>
         <!--TABLE-->
     <p-table [columns]="cols_recommender" [value]="recommender_obj"
-        styleClass="p-datatable"
-        [scrollable]="true" scrollHeight="300px">
+        styleClass="p-datatable-striped p-datatable1">
         <ng-template pTemplate="header" let-columns>
             <tr style="width: fit-content;">
-                <th *ngFor="let col of columns" [pSortableColumn]="col.field" [ngStyle]="styleRecommender(col.field)">
+                <th *ngFor="let col of columns" [ngStyle]="styleRecommender(col.field)">
                     {{col.header}}
-                    <p-sortIcon field="col.field"></p-sortIcon>
                 </th> 
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowData>
             <tr *ngFor="let number of [0,1,2,3,4]">
-                <td style="width: 100px;">{{rowData.a[number]}}</td>
-                <td style="width: 60px;">
+                <td style="width: 140px;">{{rowData.a[number]}}</td>
+                <td style="width: 50px;">
                     <div *ngIf="rowData.c[number].trim()==='coursera'"
                         style="color: rgb(57, 57, 228); ">
                         <p-tag value="coursera"></p-tag>
