--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -7,16 +7,16 @@
   [asideMenuToggler]=false>
   <ul class="nav navbar-nav d-md-down-none">
     <li class="nav-item px-4">
-      <h5 style="color: grey; margin-top: 8px;">PSEUDOCODE</h5>
+      <h5 style="color: rgb(59, 57, 57); margin-top: 8px;">PSEUDOCODE</h5>
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item px-2">
+    <!-- <li class="nav-item px-2">
       <span class="p-input-icon-right">
         <i class="pi pi-search"></i>
         <input type="text" pInputText placeholder="Search" class="p-inputtext-sm">         
       </span>
-    </li>
+    </li> -->
     <li class="nav-item px-2">
       <button pButton label="Edit Info" class="p-button-sm p-button-info" icon="pi pi-user-edit" (click)="showModalDialog();EditInfo_get()"></button>
     </li>
@@ -24,30 +24,11 @@
       <button pButton label="Logout" class="p-button-sm p-button-secondary" 
         (click)="logout()" icon="pi pi-power-off"></button>
     </li>
-    <!-- <li class="nav-item dropdown" dropdown placement="bottom right">
-      <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img src="assets/img/avatars/t.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong>Account</strong></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">42</span></a>
-        <div class="dropdown-header text-center"><strong>Settings</strong></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Setting</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-dark">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>
-        <div class="divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
-      </div>
-    </li> -->
+  
   </ul> 
 </app-header>
 <div class="app-body">
-  <app-sidebar #appSidebar [fixed]="true" [display]="'lg'" [minimized]="sidebarMinimized" (minimizedChange)="toggleMinimize($event)">
+  <app-sidebar #appSidebar  [fixed]="true" [display]="'lg'" [minimized]="sidebarMinimized" (minimizedChange)="toggleMinimize($event)">
     <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] [disabled]="appSidebar.minimized"></app-sidebar-nav>
     <app-sidebar-minimizer></app-sidebar-minimizer>
   </app-sidebar>
@@ -67,27 +48,18 @@
     <form [formGroup]='edit_info'>
         <div class="row">
         <div class="col-sm-6 col-6">
-          <label for="image">
-            <input type="file" name="image" id="image" style="display:none;" accept="image/x-png,image/jpeg,image/jpg"/>
-            <img class='edit' src="assets/img/addImage.png"/>
-          </label>
-        </div>
-
-        <div class="col-sm-6 col-6 input_field"><br><br>
-          <div class="row">
-            <div class="p-inputgroup">
-              <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-              <input placeholder="First Name" type="text" class="form-control" formControlName="first_name" required pInputText>
-            </div>
-          </div><br>
-          <div class="row">
-            <div class="p-inputgroup">
-              <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-              <input placeholder="Last Name" type="text" class="form-control" formControlName="last_name" required pInputText>
-            </div>
+          <div class="p-inputgroup">
+            <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+            <input placeholder="First Name" type="text" class="form-control" formControlName="first_name" required pInputText>
           </div>
         </div>
-      </div>
+        <div class="col-sm-6 col-6">
+          <div class="p-inputgroup">
+            <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+            <input placeholder="Last Name" type="text" class="form-control" formControlName="last_name" required pInputText>
+          </div>
+        </div>        
+      </div><br>
       <div class='row'>
         <div class='col-sm-6'>
           <div class="p-inputgroup">
